working with carousel, fixing overflow

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#lessons .carousel-item {
+    min-width: 100%;
+    max-width: 100%;
+
+}
+
+@media (min-width: 768px) {
+    #lessons .carousel-item {
+        min-width: calc(25% - 2rem);
+        max-width: calc(25% - 2rem);
+    }
+}
+
